--- a/HromadskyiPatrul/Base.lproj/Main.storyboard
+++ b/HromadskyiPatrul/Base.lproj/Main.storyboard
@@ -597,9 +597,11 @@
                                     <constraint firstAttribute="bottom" secondItem="4cb-ys-WhI" secondAttribute="bottom" constant="2" id="uzP-cB-myO"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COMMAND:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfu-VX-Jwy" userLabel="Voice Commands Label">
-                                <rect key="frame" x="220" y="69" width="95" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfu-VX-Jwy" userLabel="Voice Commands Label">
+                                <rect key="frame" x="258" y="74" width="52" height="40"/>
                                 <animations/>
+                                <string key="text">START
+VIDEO</string>
                                 <fontDescription key="fontDescription" name="Tahoma" family="Tahoma" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -613,12 +615,12 @@
                             <constraint firstItem="UjC-Ec-Nht" firstAttribute="top" secondItem="Lh8-SN-AYI" secondAttribute="top" id="CiH-yc-uz5"/>
                             <constraint firstItem="LmS-0N-oYH" firstAttribute="top" secondItem="UjC-Ec-Nht" secondAttribute="bottom" id="FXj-1C-eCt"/>
                             <constraint firstItem="UjC-Ec-Nht" firstAttribute="leading" secondItem="Lh8-SN-AYI" secondAttribute="leading" id="Fb4-Qg-LDU"/>
-                            <constraint firstAttribute="trailing" secondItem="Kfu-VX-Jwy" secondAttribute="trailing" constant="5" id="HYj-xv-ffJ"/>
+                            <constraint firstAttribute="trailing" secondItem="Kfu-VX-Jwy" secondAttribute="trailing" constant="10" id="HYj-xv-ffJ"/>
                             <constraint firstAttribute="trailing" secondItem="5Ip-33-TZr" secondAttribute="trailing" id="cTt-E9-CJx"/>
                             <constraint firstItem="UjC-Ec-Nht" firstAttribute="top" secondItem="Lh8-SN-AYI" secondAttribute="top" id="oOq-Iv-vAm"/>
                             <constraint firstItem="UjC-Ec-Nht" firstAttribute="centerX" secondItem="Lh8-SN-AYI" secondAttribute="centerX" id="pas-w9-xjc"/>
                             <constraint firstAttribute="trailing" secondItem="UjC-Ec-Nht" secondAttribute="trailing" id="px9-YN-fxM"/>
-                            <constraint firstItem="Kfu-VX-Jwy" firstAttribute="top" secondItem="FGf-M5-a3S" secondAttribute="bottom" constant="5" id="u5M-Zy-roW"/>
+                            <constraint firstItem="Kfu-VX-Jwy" firstAttribute="top" secondItem="FGf-M5-a3S" secondAttribute="bottom" constant="10" id="u5M-Zy-roW"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="jAl-Is-mnm" appends="YES" id="3tU-gl-JBy"/>
@@ -639,7 +641,6 @@
                         <outlet property="statusViewVerticalSpaceConstraint" destination="2Rr-be-pGe" id="rP8-hQ-Fg9"/>
                         <outlet property="timerLabel" destination="BzL-3N-W4p" id="sIe-Gk-r1J"/>
                         <outlet property="videoView" destination="UjC-Ec-Nht" id="bSc-E3-9PA"/>
-                        <outlet property="voiceCommandLabel" destination="Kfu-VX-Jwy" id="hm0-i9-Egx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qxG-qD-MMO" userLabel="First Responder" sceneMemberID="firstResponder"/>
